[package]
name = "client-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"                 # Flexible concrete Error type built on std::error::Error
solana-cli-config = "1.9.9"       # Blockchain, Rebuilt for Scale